test/errors/keywords/autoreleasepool_reserved_fail.hy
int main()
{
    @autoreleasepool {
        int value = 1
    }

    return 0
}